<resources>

<!--    /*Author: Binod Shrestha-->
<!--    Student ID: 991462138-->
<!--    Course: Android Advance Programming-->
<!--    School: Sheridan College*/-->
    <string name="app_name">DollarFinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Expense Tracker</string>
    <string name="nav_header_subtitle">an application to track dollar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="menu_home">Home</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_income">Income</string>
    <string name="menu_summary">Summary</string>
    <string name="fragment_summary">Summary</string>
    <string name="nav_earnings">Earnings </string>
    <string name="fragment_about">This appliation is developed by the team of 3 students from Sheridan as the requirement of the course.\n\nThe app is to track the dollar earned and spent by the user. The application also provides an analysis to help users to estimate their expense and to save the earnings.\n\n\n Application Name: ExpenseTracker\n Group No: 07\n Group Members:\n   Binod Shrestha(991462138\n   Hemraj Kafle(9914511170)\n   Saam Haghighat(991455311)\n School: Sheridan College \n Course: PROG39402</string>
    <string name="nav_expenditure">Expenditure </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>