<?xml version="1.0" encoding="utf-8"?>

<!--    /*Author: Binod Shrestha-->
<!--    Student ID: 991462138-->
<!--    Course: Android Advance Programming-->
<!--    School: Sheridan College*/-->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="project.stsBHS.dollarfinalproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_summaryFragment"
            app:destination="@id/summaryFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_nav_home_to_earningsFragment"
            app:destination="@id/earningsFragment"
            app:popUpTo="@id/earningsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_home_to_expenditureFragment"
            app:destination="@id/expenditureFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_nav_home_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/summaryFragment"
        android:name="project.stsBHS.dollarfinalproject.ui.summary.SummaryFragment"
        android:label="@string/fragment_summary"
        tools:layout="@layout/fragment_summary" >
        <action
            android:id="@+id/action_summaryFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/earningsFragment"
        android:name="project.stsBHS.dollarfinalproject.ui.income.EarningsFragment"
        android:label="@string/nav_earnings"
        tools:layout="@layout/fragment_earnings">
        <action
            android:id="@+id/action_earningsFragment_to_addEarning"
            app:destination="@id/addEarning" />
        <action
            android:id="@+id/action_earningsFragment_to_modifyEarningsFragment"
            app:destination="@id/modifyEarningsFragment" />
    </fragment>
    <fragment
        android:id="@+id/expenditureFragment"
        android:name="project.stsBHS.dollarfinalproject.ui.expense.ExpenditureFragment"
        android:label="@string/nav_expenditure"
        tools:layout="@layout/fragment_expenditure">
        <action
            android:id="@+id/action_expenditureFragment_to_addExpense"
            app:destination="@id/addExpense" />
        <action
            android:id="@+id/action_expenditureFragment_to_editExpense"
            app:destination="@id/editExpense" />
    </fragment>
    <fragment
        android:id="@+id/addExpense"
        android:name="project.stsBHS.dollarfinalproject.ui.expense.AddExpense"
        android:label="@string/nav_expenditure"
        tools:layout="@layout/fragment_add_expense">
        <action
            android:id="@+id/action_addExpense_to_expenditureFragment"
            app:destination="@id/expenditureFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEarning"
        android:name="project.stsBHS.dollarfinalproject.ui.income.AddEarning"
        android:label="@string/nav_earnings"
        tools:layout="@layout/fragment_add_earning">
        <action
            android:id="@+id/action_addEarning_to_earningsFragment"
            app:destination="@id/earningsFragment" />
    </fragment>
    <fragment
        android:id="@+id/modifyEarningsFragment"
        android:name="project.stsBHS.dollarfinalproject.ui.income.ModifyEarningsFragment"
        android:label="@string/nav_earnings"
        tools:layout="@layout/modify_earnings_fragment">
        <action
            android:id="@+id/action_modifyEarningsFragment_to_earningsFragment"
            app:destination="@id/earningsFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="project.stsBHS.dollarfinalproject.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/editExpense"
        android:name="project.stsBHS.dollarfinalproject.ui.expense.EditExpense"
        android:label="Expenditure"
        tools:layout="@layout/fragment_edit_expense" >
        <action
            android:id="@+id/action_editExpense_to_expenditureFragment"
            app:destination="@id/expenditureFragment" />
    </fragment>
</navigation>